added new words

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <p  class="inside"  id="mocha">Mocha Cookie Latte</p><br>
                 <br>
                 <br>
-                <p  class="inside" id="tempt">Tempt your taste buds with the perfect combination of valvety mocha and irresistable cookies crumbles</p>
+                <p  class="inside" id="tempt">Indulge your senses with the smooth richness of velvety mocha, perfectly paired with irresistible cookie crumbles.</p>
                 <br><br><br>
                 <p  class="inside" id="starting">Starting from</p><br>
                 <p  class="inside" id="price">₹414.00</p><br>
